created Models, Controllers

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,487 @@
-//
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
+.clear {
+    clear: both;
+}
+
+.mainContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    // height:100vh;
+    height: 100%;
+    overflow: hidden;
+    //background: url("main.jpg") no-repeat center;
+    background-color: red($color: #FF0000);
+    background-size: cover;
+}
+
+.title {
+    display: flex;
+    color: blue;
+    font-size: 48px;
+    margin: 160px  auto 0;
+}
+
+.mainButton {
+    display: flex;
+    text-align: center;
+    text-decoration: none;
+    margin: 60px  auto 0;
+    min-height: 30px;
+    min-width: 178px;
+    padding: 8px 58px;
+    color: #fff;
+    background-color: #008cff;
+    font-size: 19px;
+    line-height: 32px;
+    border: 2px solid #666;
+    border-radius: 19px;
+}
+
+.mainButton:hover {
+    cursor: pointer;
+    background-color: #0055ff;
+}
+
+// register.css
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
+.clear {
+    clear: both;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    min-height: 100%;
+    text-align: center;
+    font-family: Georgia;
+    font-size: 19px;
+    line-height: 32px;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    flex: 0 0 auto;
+    color:#000;
+    background-color: #e6e6e6;
+    height: 62px;
+    padding-top: 16px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
+    margin: 0 auto;
+    padding-top: 28px;
+    background-color: #fff;
+    text-align: center;
+}
+
+.formBlock {
+    margin: 0 auto;
+}
+.inputForm {
+    display: flex;
+    margin: 20px;
+    padding: 8px;
+    min-height: 30px;
+    min-width: 158px;
+    font-size: 19px;
+    line-height: 32px;
+    border: 2px solid #666;
+}
+
+.buttonReg {
+    display: block;
+    text-align: center;
+    margin: 20px;
+    min-height: 30px;
+    min-width: 252px;
+    padding: 8px;
+    color: #fff;
+    background-color: #008cff;
+    font-size: 19px;
+    line-height: 32px;
+    border: 2px solid #666;
+    border-radius: 19px;
+}
+
+.buttonReg:hover {
+    cursor: pointer;
+    background-color: #0055ff;
+}
+
+.output {
+    display: flex;
+    margin: 0 auto;
+    color: red;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    padding-top: 28px;
+}
+// main.css
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
+.clear {
+    clear: both;
+}
+
+.mainContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    min-height: 100%;
+    text-align: center;
+    font-family: "Georgia";
+    font-size: 19px;
+    line-height: 32px;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 0 0 auto;
+    color:#000;
+    background-color: #e6e6e6;
+    height: 62px;
+    line-height: 24px;
+    padding-top: 16px;
+}
+
+.link {
+    font: 16px/20px "Georgia", serif;
+    text-decoration: none;
+    color: inherit;
+}
+
+.linkName {
+    color: blue;
+    text-decoration: underline;
+}
+
+.linkName:hover {
+    color: #0055ff;
+    cursor: pointer;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    flex: 1 0 auto;
+    margin: 0 auto;
+    height: calc(100vh - 2 * 62px - 16px - 28px);
+    width: 100%;
+    background-color: bisque;
+    text-align: center;
+}
+.leftContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: bisque;
+    width: 40%;
+    max-width: 320px;
+    border-left: 2px;
+}
+
+.searchBlock {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: 1px solid #666;
+    margin: 12px;
+    padding: 4px;
+    min-height: 30px;
+}
+
+.inputSearchBlock {
+    width: 100%;
+    flex-grow: 1;
+    font-size: 19px;
+    padding: 0 4px;
+    color: blue;
+    background-color: bisque;
+}
+
+.searchIcon {
+    display: flex;
+    height: 27px;
+    width: 30px;
+    margin-top: 3px;
+    background: url("../image/icons8-search-32.png") no-repeat;
+    background-size: 80% auto;
+}
+
+.listOfNotesBlock {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 2 * 62px - 16px - 28px - 40px - 66px);
+    margin: 0 12px;
+    flex-grow: 1;
+    overflow-y: scroll;
+    background-color: blanchedalmond;}
+
+
+.listOfNotesBlock::-webkit-scrollbar {
+    width: 0;
+}
+
+.noteItemBlock {
+    display: none;
+    flex-direction: row;
+    max-height: 32px;
+    max-width: 100%;
+}
+
+.noteItemName {
+    flex-grow: 1;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    text-align: start;
+    overflow: hidden;
+}
+
+.noteItemDate {
+    display: flex;
+}
+
+.noteItemActions {
+    display: flex;
+    flex-direction: row;
+    padding: 6px 0 0 6px;
+}
+
+.editIcon,
+.deleteIcon {
+    display: flex;
+    height: 18px;
+    width: 18px;
+    margin: 2px 0 0 2px;
+}
+
+.editIcon {
+    background: url("../image/icons8_edit_32.png") no-repeat;
+    background-size: 80% auto;
+}
+
+.deleteIcon {
+    background: url("../image/icons8_delete_32.png") no-repeat;
+    background-size: 80% auto;
+}
+
+.buttonBlock {
+    display: flex;
+    justify-content: center;
+}
+
+.buttonAddNote {
+    display: block;
+    text-align: center;
+    margin: 12px;
+    min-height: 30px;
+    width: 100%;
+    padding: 8px;
+    color: #fff;
+    background-color: #008cff;
+    font-size: 19px;
+    line-height: 24px;
+    border: 1px solid #666;
+    border-radius: 19px;
+}
+
+.buttonAddNote:hover {
+    cursor: pointer;
+    background-color: #0055ff;
+}
+
+.betweenContainer {
+    display: flex;
+    width: 2%;
+    background-color: #fff;
+    border-left: 1px solid #666;
+    border-right: 1px solid #666;
+}
+
+.rightContainerInfo,
+.rightContainerCreate,
+.rightContainerEdit {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: antiquewhite;
+}
+
+.visible {
+    display: flex;
+}
+
+.noteHeaderBlockInfo {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid #666;
+    margin: 12px;
+    min-height: 30px;
+}
+
+.noteNameBlockInfo {
+    display: flex;
+    width: 100%;
+    flex-grow: 1;
+    padding: 8px;
+}
+
+.noteDateBlockInfo {
+    display: flex;
+    width: 180px;
+    padding: 8px;
+}
+
+.infoBlockInfo {
+    display: flex;
+    margin: 12px;
+    padding: 8px;
+}
+
+.noteHeaderBlockCreate {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #666;
+    margin: 12px;
+    min-height: 30px;
+}
+
+.noteHeaderBlockEdit {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #666;
+    margin: 12px;
+    min-height: 30px;
+}
+
+.noteEditBlock {
+    display: flex;
+    color: #000;
+    font: 16px/20px "Georgia", serif;
+}
+
+.formBlock {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    font-size: 19px;
+    margin: 12px;
+}
+
+.inputForm {
+    display: flex;
+    flex-grow: 1;
+    margin: 12px 0;
+    padding: 8px;
+    font-size: 19px;
+    line-height: 32px;
+    border: 1px solid #666;
+}
+
+.inputForm:first-child {
+    margin-top: -12px;
+}
+
+.noteNameBlockEdit {
+    display: flex;
+    max-height: 30px;
+    padding: 8px;
+}
+
+.noteDateBlockEdit {
+    display: flex;
+    max-height: 30px;
+    padding: 8px;
+}
+
+.infoBlockEdit {
+    display: flex;
+    flex-grow: 1;
+    padding: 8px;
+}
+
+.buttonSave,
+.buttonCancel {
+    display: block;
+    text-align: center;
+    margin: 20px;
+    min-height: 30px;
+    min-width: 180px;
+    padding: 8px;
+    color: #fff;
+    background-color: #008cff;
+    font-size: 19px;
+    line-height: 32px;
+    border: 1px solid #666;
+    border-radius: 19px;
+}
+
+.buttonSave:hover {
+    cursor: pointer;
+    background-color: #0055ff;
+}
+
+.buttonCancel {
+    background-color: #ff7640;
+}
+
+.output {
+    display: flex;
+    margin: 0 auto;
+    color: red;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    padding-top: 28px;
+}
+
+button:hover {
+   cursor: pointer;
+}
