--- a/public/css/main.css
+++ b/public/css/main.css
@@ -170,6 +170,7 @@ html, body {
 .buttonBlock {
     display: flex;
     justify-content: center;
+    text-decoration: none !important;
 }
 
 .buttonAddNote {
