--- a/public/css/index.css
+++ b/public/css/index.css
@@ -37,7 +37,7 @@ html, body {
     text-decoration: none;
     margin: 60px  auto 0;
     min-height: 30px;
-    min-width: 178px;
+    min-width: 58px;
     padding: 8px 58px;
     color: #fff;
     background-color: #008cff;
@@ -49,5 +49,7 @@ html, body {
 
 .mainButton:hover {
     cursor: pointer;
+    color: antiquewhite;
+    text-decoration: none;
     background-color: #0055ff;
 }
