--- a/public/css/main.css
+++ b/public/css/main.css
@@ -123,12 +123,12 @@ html, body {
     max-width: 100%;
 }
 
-.noteItemBlockA{
+.noteItemBlockInfo{
     display: flex;
     flex-grow: 1;
     flex-direction: row;
     max-height: 32px;
-    max-width: 100%; 
+    max-width: 80%; 
 }
 
 .noteItemName {
